--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -126,3 +126,4 @@ How does the old dog catch the rabbit? He waits until the rabbit gets tired. - O
 "Nine-tenths of wisdom is being wise in time." - Theodore Roosevelt
 "We didn't lose the game; we just ran out of time." - Vince Lombardi
 "When the going gets weird, the weird turn pro." - Hunter S. Thompson
+Never compare your insides to someone else's outsides - Rob Lowe
