--- a/Cost Savings Processing.wiki
+++ b/Cost Savings Processing.wiki
@@ -3,5 +3,5 @@
 Upon receipt of new Cost Savings from Program Manager:
 * [ ] Make new entry in Cost Savings Log
 * [ ] Number Cost Savings form and save in folder
-* [ ] Send numbere dform bakc to Program Manager.
+* [ ] Send numbered form back to Program Manager.
 * [ ] Print Cost Savings Log and post near copier.
