--- a/Parts for Chevy.wiki
+++ b/Parts for Chevy.wiki
@@ -4,5 +4,5 @@ Chevy parts needed:
 	Radiator support
 	Hood
 	Right and Left Fenders
-	Right and left mirrors
+	Right and left mirrors - replaced 09-07-2015.
 	AC Compressor
