--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -125,3 +125,5 @@ How does the old dog catch the rabbit? He waits until the rabbit gets tired. - O
 "Nine-tenths of wisdom is being wise in time." - Theodore Roosevelt
 "We didn't lose the game; we just ran out of time." - Vince Lombardi
 "When the going gets weird, the weird turn pro." - Hunter S. Thompson
+"Who is the happier man, he who has braved the storm of life and lived, or he who has stayed securely on shore and merely existed?" - Hunter S. Thompson
+"Some people will tell you that slow is good ¿ but I¿m here to tell you that fast is better. I¿ve always believed this, in spite of the trouble it¿s caused me. Being shot out of a cannon will always be better than being squeezed out of a tube." - Hunter S. Thompson
