--- a/diary/2015-09-08.wiki
+++ b/diary/2015-09-08.wiki
@@ -23,6 +23,6 @@ Processed revised PO for 107136.
 
 Rolled Pending CNs in PT for 106888 and 106817. 
 
-Printed 014 report sof rWednesdya morning meeting.
+Printed 014 reports for Wednesdya morning meeting.
 
 Out at 1700.
