--- a/diary/2015-10-07.wiki
+++ b/diary/2015-10-07.wiki
@@ -3,7 +3,23 @@ Arrive 0715.
 Attended weekly leads meeting.
 	Possible CNs:
 		106888 - see Harv for details.
-		105483 - Schedule slide - see Jim H fof details.
+		105483 - Schedule slide - see Jim H for details.
 	Close 106211? - check with Harv
 	
 Opened charge elements for all workgroups on 107185.210 per Geoff direction.
+
+Transferred WE 10/2 hours from P3 to P4 on 107413 and 107473 per Geoff direction.
+
+Opened all P4 charge elements for 107225 per Harv.
+
+Updated Cost Data (source) tabs in Quarterly Report workbooks. Prepared note to Angie for where to pick things up.
+
+Closed 106504 P4 per Harv direction.
+
+Updated Shell Resource Forecast with PL inputs. Removed Tier 3 project at Geoff's direction.
+
+Issued ShellPSR Resource Forecast.
+
+Prepared Procurement Plans and PSRs for monthly report.
+
+Out at 1615.
