--- a/Weekly Cadence.wiki
+++ b/Weekly Cadence.wiki
@@ -3,24 +3,24 @@ Throughout the month:
 * [ ] Update Cost Savings Log with any new items received from Geoff Latimer
 
 First business day of the month:
-* [.] Update and distribute Shell Resource Forecast to Project Leaders:
-	* [ ] Harv Aujla
-	* [ ] Jim Holein
+* [X] Update and distribute Shell Resource Forecast to Project Leaders:
+	* [X] Harv Aujla
+	* [X] Jim Holein
 	* [X] Howard Leung
-	* [ ] Ron Peterson
-	* [ ] Dean Zehner
+	* [X] Ron Peterson
+	* [X] Dean Zehner
 
 Fifth business day of the month:
-* [ ] Issue Shell Resource Forecast to Client [[file:///S:/SHELLPSR/GENERAL/PMC/PC/Cost Reports/2015/]]
+* [X] Issue Shell Resource Forecast to Client [[file:///S:/SHELLPSR/GENERAL/PMC/PC/Cost Reports/2015/]]
 
 First week of the month:
 * [X] Receive and issue monthly Engineering and Onsite Hours/Dollars report [[Monthly Estimate Process]]
 * [X] [[Onsite Capital Project Hours]]	
 
 Second week of the month:
-* [ ] After narratives complete, run 028 reports as required.
-* [ ] Transmit (upload to SharePoint) the Monthly Report.
-* [ ] Managers Monthly Workgroup - Internal Resource Forecast
+* [X] After narratives complete, run 028 reports as required.
+* [X] Transmit (upload to SharePoint) the Monthly Report.
+* [X] Managers Monthly Workgroup - Internal Resource Forecast
 
 Third week of the month:
 * [ ] Issue Internal Program Project Services Resource Forecast
