--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,28 @@
 
 == 2015 ==
 
+=== October ===
+        * [[2015-10-22]]
+        * [[2015-10-21]]
+        * [[2015-10-20]]
+        * [[2015-10-19]]
+        * [[2015-10-16]]
+        * [[2015-10-15]]
+        * [[2015-10-14]]
+        * [[2015-10-13]]
+        * [[2015-10-12]]
+        * [[2015-10-09]]
+        * [[2015-10-08]]
+        * [[2015-10-07]]
+        * [[2015-10-06]]
+        * [[2015-10-05]]
+        * [[2015-10-02]]
+        * [[2015-10-01]]
+
 === September ===
+        * [[2015-09-30]]
+        * [[2015-09-29]]
+        * [[2015-09-28]]
         * [[2015-09-24]]
         * [[2015-09-23]]
         * [[2015-09-22]]
